[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Objects/SpacePortal.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.609091 ), 0.0, 0.0, 0, 0, Vector2( 0.278481, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.263636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.1
initial_velocity_random = 0.26
angular_velocity = 5.0
linear_accel_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 0, 0, 0, 0.631373 )

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )
radius = 0.1
height = 0.2

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.314726, 0.111336, 0.289351 )

[node name="SpacePortal" type="Particles"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, -0.00677395, 1.79569, -5.32545 )
amount = 400
lifetime = 13.06
visibility_aabb = AABB( -1.00931, -0.981158, -0.942714, 2.01861, 1.96232, 1.88543 )
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )
script = ExtResource( 1 )

[node name="OmniLight" type="OmniLight" parent="."]
light_energy = 0.0
light_negative = true
omni_range = 0.7

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 6 )
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
